# DongEtAl2025

./: .gitignore  LICENSE  README.md  activate_venv.sh  ozstar_tempo2_setup.md  pyproject.toml  requirements.txt
configs/: analysis_config.ini  config.ini  cornerplot.toml  hyper_config.ini
data/: atnf_glitch_table-20250609.csv
data/TimingDataRelease1/: LICENSE  README.md
data/meertime-utmostPSR/: pulsar_fold_result_J0030+0451.csv  pulsar_fold_result_J0134-2937.csv  pulsar_fold_result_J0151-0635.csv  pulsar_fold_result_J0152-1637.csv  pulsar_fold_result_J0206-4028.csv  pulsar_fold_result_J0255-5304.csv  pulsar_fold_result_J0348+0432.csv  pulsar_fold_result_J0401-7608.csv  pulsar_fold_result_J0418-4154.csv  pulsar_fold_result_J0437-4715.csv  pulsar_fold_result_J0450-1248.csv  pulsar_fold_result_J0452-1759.csv  pulsar_fold_result_J0525+1115.csv  pulsar_fold_result_J0529-6652.csv  pulsar_fold_result_J0533+0402.csv  pulsar_fold_result_J0536-7543.csv  pulsar_fold_result_J0601-0527.csv  pulsar_fold_result_J0624-0424.csv  pulsar_fold_result_J0627+0706.csv  pulsar_fold_result_J0630-2834.csv  pulsar_fold_result_J0646+0905.csv  pulsar_fold_result_J0659+1414.csv  pulsar_fold_result_J0711-6830.csv  pulsar_fold_result_J0729-1836.csv  pulsar_fold_result_J0737-3039A.csv  pulsar_fold_result_J0738-4042.csv  pulsar_fold_result_J0742-2822.csv  pulsar_fold_result_J0758-1528.csv  pulsar_fold_result_J0809-4753.csv  pulsar_fold_result_J0820-1350.csv  pulsar_fold_result_J0820-4114.csv  pulsar_fold_result_J0835-4510.csv  (+256 more)
docs/: .gitignore
notebooks/: dm_checking.ipynb  libstempo_worker.py  utmost-paperplots.ipynb
(+939 files in other folders)
