[project]
name = "timkfest-pop"
version = "0.0.0-dev"
description = "\"A Python package for parameter estimating pulsar timing data with Kalman filtering.\""
authors = [
    {name = "Wenhao Dong",email = "wddong@student.unimelb.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["pulsar", "timing", "population", "kalman filter"]
dependencies = [
    "numpy==2.2.1",
    "pandas==2.2.3",
    "matplotlib==3.10.0",
    # see bilby requirements; e.g. scipy.special.btdtri is removed from scipy1.14
    "scipy>=1.5,<1.14",
    "astropy==7.0.0",
    "jupyter==1.1.1",
    "pytest==8.3.4",
    "mpmath==1.3.0",
    "bilby==2.4.0",
    # see dynesty Changelog, e.g. 2.1.4: .ptp() method (deprecated in numpy 2.0) changed to np.ptp() function
    "dynesty==2.1.5",
    "sdeint==0.3.0",
    "seaborn==0.13.2",
    "polars==1.26.0",
    "pydantic==2.11.4",
    "tomli-w==1.2.0",
]
[project.optional-dependencies]
extras = [
    "jax==0.5.3",
    "ultranest==4.4.0",
    "mpi4py==4.0.3",
]

[project.urls] 
Repository = "https://github.com/wdong-eric/PulsarTiming-population"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
timkf-corner = "timkf.cli.cornerplot:main"
timkf-modcmp = "timkf.cli.model_comparison:main"
timkf-indivs = "timkf.cli.run_individuals:main"
timkf-hyper = "timkf.cli.run_hyper:main"